--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ a:hover {
     position: absolute;
     right: 30px;
     top: 70px;
-    z-index: 1;
+    z-index: 2;
 
     border-radius: 0.5rem;
     /* border: 1px solid rgb(112, 117, 122); */
@@ -75,6 +75,8 @@ a:hover {
     height: 100px;
     width: 100px;
     padding-top: 10px;
+    margin-bottom: 15px;
+
     font-size: 0.7rem;
     text-decoration: none;
     text-align: center;
@@ -91,36 +93,167 @@ a:hover {
     border-radius: 10px;
 }
 
+.profileSubMenu {
+    width: 19rem;
+    max-height: 350rem;
+    padding: 20px 40px 0px 20px;
+
+    background-color: #fff;
+    box-shadow: 0.1em 0.1em 1.5rem rgb(32 33 36 / 28%);
+    position: absolute;
+    right: 30px;
+    top: 70px;
+    z-index: 1;
+
+    border-radius: 12px;
+
+    opacity: 0;
+}
+
+.profileSubMenu .subMenuItems {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 3rem;
+
+    font-size: 20px;
+    font-weight: 700;
+
+    margin: 0 0 20px 150px;
+}
+
+
+.profileSubMenu>img {
+    position: absolute;
+    left: 15px;
+    top: 10px;
+    width: 7rem;
+}
+
+.profileSubMenu .subMenuItems>p {
+    font-size: 35px;
+    margin: 20px 0 0 0;
+}
+
+.profileSubMenu .subMenuItems>a {
+    transition: transform 0.3s ease;
+}
+
+.profileSubMenu .subMenuItems>a:hover {
+    text-decoration: none;
+    transform: scale(1.5);
+}
+
+.profileShow {
+    opacity: 1;
+}
+
 /* Dark mode toggle */
 
-/* .toggleon {
-    display: none;
-} */
+/* for slider */
 
-.moreOption>a>.track {
-
+.moreOption a>.track>input {
+    -webkit-appearance: none;
     position: relative;
 
-    background-color: #f2f2f2;
-    border: 1px solid #f2f2f2;
-    border-radius: 24px;
-    width: 50px;
+    width: 40px;
     height: 20px;
+    background-color: #ccc;
+    border-radius: 24px;
+    outline: none;
+    cursor: pointer;
+
+    transition: .3s;
 }
 
-.moreOption>a>.track>.ball {
-    width: 20px;
-    height: 10px;
-    color: #5f6368;
-    border-radius: 50%;
+.moreOption a>.track>input::after {
+    content: '';
 
     position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    top: 50%;
+    left: 30%;
+
+    background-color: #fff;
+    border-radius: 50%;
+    width: 1.15em;
+    height: 1.15em;
+
+    transform: translate(-50%, -50%);
+    transition: left .3s;
 }
+
+.moreOption a>.track>input:checked::after {
+    left: 70%;
+}
+
+/* for slider */
+
+body.darkMode,
+body.darkmode footer,
+body.darkmode input {
+    background-color: #202124;
+    color: #fff;
+}
+
+body.darkmode a,
+body.darkmode p {
+    color: #c2bfbf;
+}
+
+body.darkmode .parentsearch {
+    border-color: #504f4f;
+    color: #c2bfbf;
+    transition: 0.3s;
+}
+
+body.darkmode .parentsearch:hover {
+    border-color: #fff;
+}
+
+body.darkmode .parentsearch .mic:hover {
+    color: #fff;
+}
+
+body.darkmode .but>input {
+    border-color: #504f4f;
+    color: #c2bfbf;
+    transition: 0.3s;
+}
+
+body.darkmode .but>input:hover {
+    border-color: #fff;
+    color: #fff;
+}
+
+body.darkmode .moreoption>a>img {
+    color: blue;
+}
+
+body.darkmode .moreoption>a:hover {
+    background-color: #3c4043;
+}
+
+
+
+/* .darkModeSubMenu {
+    background-color: #202124;
+    color: #fff;
+    box-shadow: 0em 0em 0.1em 0.1px #fff;
+} */
+
+body.darkmode .moreoption {
+    background-color: #202124;
+    color: #c2bfbf;
+    box-shadow: 0em 0em 0.1em 0.1px #fff;
+}
+
+body.darkmode .profileSubMenu {
+    background-color: #202124;
+    color: #c2bfbf;
+    box-shadow: 0em 0em 0.1em 0.1px #fff;
+}
+
 
 /* Dark mode toggle */
 
@@ -204,7 +337,7 @@ a:hover {
     height: 35px;
     width: 35px;
     color: #fff;
-    background-color: #b18a8a;
+    /* background-color: #b18a8a; */
     border-radius: 50%;
     font-weight: 600;
     font-size: 18px;
@@ -257,7 +390,7 @@ main {
 
 
 
-.microphone {
+.accessOptions {
     display: flex;
     gap: 10px;
 }
